--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,7 @@ a {
 header {
   display: flex;
   flex-direction: column;
+  text-align: center;
+  background-color: #faccca;
+  padding-bottom: 10px;
 }
